--- a/templates/payment.html
+++ b/templates/payment.html
@@ -207,10 +207,10 @@
                 document.getElementById('razorpay-success-form').submit();
               },
               prefill: {
-                name: "Test User",
-                email: "test@example.com",
-                contact: "9999999999"
-              },
+                name: "{{ current_user.name }}",
+                email: "{{ current_user.email }}",
+                contact: "{{ current_user.phone }}"   },
+
               theme: { color: "#3399cc" }
             };
 
